--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script>
         // Redirect to GitHub after page load
         window.onload = function() {
-            window.location.href = "https://github.com";
+            window.location.href = "https://github.com/gregorioacerussell/CPEN60-Laboratory-Manual";
         };
     </script>
 </head>
 <body>
-    <h1>Redirecting you to GitHub...</h1>
+    <h1>Eto redirect mo to</h1>
 </body>
 </html>
