--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirect to GitHub</title>
-    <script>
-        // Redirect to GitHub after page load
-        window.onload = function() {
-            window.location.href = "https://github.com/gregorioacerussell/CPEN60-Laboratory-Manual";
-        };
-    </script>
+    <title>Redirect mo to boi</title>
 </head>
 <body>
-    <h1>Eto redirect mo to</h1>
+    <h1>Testing mo to</h1>
+    <h2>Eto mas maliit na h1</h2>
 </body>
 </html>
