--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirect mo to boi</title>
+    <title>Capsule Proposal</title>
 </head>
 <body>
-    <h1 id="main-heading">Capstone Ready</h1>
-    <h2 id="sub-heading">Penge Title</h1>
-    <p>You will see the heading change after 5 seconds.</p>
+    <h1>G Capstone?</h1>
 </body>
 </html>
